[package]
name = "sample-rt"
version = "0.1.0"
authors = ["Mike Stefan <mikegstefan66@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.vex-rt]
# Comment out the version line and uncomment the git line to use pre-release versions.
version = "0.11.2"
# git = "https://gitlab.com/qvex/vex-rt.git"
